--- a/learn/bootstrap/other/page.html
+++ b/learn/bootstrap/other/page.html
@@ -9,6 +9,7 @@
 </head>
 <body data-bs-theme="light">
     <div class="container-fluid">
+        <!-- 导航栏 -->
         <nav class="navbar navbar-expand-sm fixed-top bg-body shadow">
             <div class="container-fluid">
                 <div class="d-flex align-items-baseline">
@@ -25,6 +26,7 @@
                 </button>
                 <div class="navbar-collapse collapse" id="nav-ul">
                     <ul class="navbar-nav navbar-nav-scroll">
+                        <!-- 下拉列表 -->
                         <li class="nav-item dropdown">
                             <button type="button" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">编程</button>
                             <ul class="dropdown-menu overflow-y-scroll" style="max-height: 75vh; top: 48px;">
@@ -51,6 +53,7 @@
                         <a href="#" class="nav-link text-nowrap">文学</a>
                         <a href="#" class="nav-link text-nowrap">音乐</a>
                         <a href="#" class="nav-link text-nowrap me-2">其他</a>
+                        <!-- 表单 -->
                         <li class="nav-item">
                             <form action="#" class="d-flex gap-1">
                                 <input type="search" name="q" id="search" class="form-control">
@@ -153,15 +156,11 @@
             </article>
             <aside class="col-2 overflow-y-scroll vh-100 shadow" style="position: sticky; top:0;">
                 <h3 class="text-center bg-body border-bottom border-2" style="position: sticky; top:0; padding-top: 70px;">HTML</h3>
-                <nav class="navbar">
-                    <div class="container-fluid">
-                        <ul class="navbar-nav nav-underline">
-                            <a class="nav-link" href="#section1">1 </a>
-                            <a class="nav-link" href="#section2">2</a>
-                            <a class="nav-link" href="#section3">3</a>
-                        </ul>
-                    </div>
-                </nav>                
+                <ul class="nav nav-pills flex-column">
+                    <a class="nav-link" href="#section1">1</a>
+                    <a class="nav-link" href="#section2">2</a>
+                    <a class="nav-link" href="#section3">3</a>
+                </ul>              
             </aside>
         </main>
     </div>
