--- a/learn/bootstrap/other/简单组件/面包屑.html
+++ b/learn/bootstrap/other/简单组件/面包屑.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="bootstrap-5.3.3/css/bootstrap.min.css" rel="stylesheet">
-    <script src="bootstrap-5.3.3/js/bootstrap.bundle.min.js"></script>
+    <link href="../../bootstrap-5.3.3/css/bootstrap.min.css" rel="stylesheet">
+    <script src="../../bootstrap-5.3.3/js/bootstrap.bundle.min.js"></script>
 </head>
 <body class="container mt-5">
     <ul class="breadcrumb">
-      <li class="breadcrumb-item"><a href="#" class="text-danger">照片</a></li>
-      <li class="breadcrumb-item"><a href="#">2017 年夏季</a></li>
+      <li class="breadcrumb-item"><a href="#">照片</a></li>
+      <li class="breadcrumb-item"><a href="#">2017年夏季</a></li>
       <li class="breadcrumb-item"><a href="#">意大利</a></li>
       <li class="breadcrumb-item active">罗马</li>
-  </ul>
+    </ul>
 </body>
 </html>
