--- a/learn/bootstrap/基础类.html
+++ b/learn/bootstrap/基础类.html
@@ -360,7 +360,7 @@
         <p class="float-start">左侧</p>
         <p class="float-end">右侧</p>
     </details>
-    <!-- 布局 -->
+    <!-- 垂直水平 -->
     <details>
         <summary>垂直水平</summary>
         <div class="hstack">
