--- a/learn/bootstrap/复杂组件/吐司框.html
+++ b/learn/bootstrap/复杂组件/吐司框.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="../../bootstrap-5.3.3/css/bootstrap.min.css" rel="stylesheet">
-    <script src="../../bootstrap-5.3.3/js/bootstrap.bundle.min.js"></script>
+    <link href="../bootstrap-5.3.3/css/bootstrap.min.css" rel="stylesheet">
+    <script src="../bootstrap-5.3.3/js/bootstrap.bundle.min.js"></script>
 </head>
 <body class="container mt-5">
   
