--- a/learn/bootstrap/简单组件/表格.html
+++ b/learn/bootstrap/简单组件/表格.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="../../bootstrap-5.3.3/css/bootstrap.min.css" rel="stylesheet">
-    <script src="../../bootstrap-5.3.3/js/bootstrap.bundle.min.js"></script>
+    <link href="../bootstrap-5.3.3/css/bootstrap.min.css" rel="stylesheet">
+    <script src="../bootstrap-5.3.3/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
 
     <table class="table">
-        <caption class="">表格</caption>
+        <caption class="">表格1</caption>
         <thead><tr class="">
             <th>编号</th>
             <th>姓名</th>
@@ -38,7 +38,7 @@
     </table>
 
     <table class="table table-borderless">
-        <caption class="">表格</caption>
+        <caption class="">表格2</caption>
         <thead><tr class="">
             <th>编号</th>
             <th>姓名</th>
@@ -66,7 +66,7 @@
     </table>
 
     <table class="table table-striped">
-        <caption class="">表格</caption>
+        <caption class="">表格3</caption>
         <thead><tr class="">
             <th>编号</th>
             <th>姓名</th>
@@ -99,7 +99,7 @@
     </table>
 
     <table class="table table-hover">
-        <caption class="">表格</caption>
+        <caption class="">表格4</caption>
         <thead><tr class="">
             <th>编号</th>
             <th>姓名</th>
@@ -127,119 +127,7 @@
     </table>
 
     <table class="table table-striped-columns">
-        <caption class="">表格</caption>
-        <thead><tr class="">
-            <th>编号</th>
-            <th>姓名</th>
-            <th>性别</th>
-        </tr></thead>
-        <tbody>
-            <tr>
-                <td>1</td>
-                <td>张三</td>
-                <td>男</td>
-            </tr>
-            <tr>
-                <td>1</td>
-                <td>张三</td>
-                <td>男</td>
-            </tr>
-        </tbody>
-        <tfoot>
-            <tr>
-                <td>总计</td>
-                <td></td>
-                <td>5</td>
-            </tr>
-        </tfoot>
-    </table>
-
-    <table class="table table-active">
-        <caption class="">表格</caption>
-        <thead><tr class="">
-            <th>编号</th>
-            <th>姓名</th>
-            <th>性别</th>
-        </tr></thead>
-        <tbody>
-            <tr>
-                <td>1</td>
-                <td>张三</td>
-                <td>男</td>
-            </tr>
-            <tr>
-                <td>1</td>
-                <td>张三</td>
-                <td>男</td>
-            </tr>
-        </tbody>
-        <tfoot>
-            <tr>
-                <td>总计</td>
-                <td></td>
-                <td>5</td>
-            </tr>
-        </tfoot>
-    </table>
-
-    <table class="table table-primary">
-        <caption class="">表格</caption>
-        <thead><tr class="">
-            <th>编号</th>
-            <th>姓名</th>
-            <th>性别</th>
-        </tr></thead>
-        <tbody>
-            <tr>
-                <td>1</td>
-                <td>张三</td>
-                <td>男</td>
-            </tr>
-            <tr>
-                <td>1</td>
-                <td>张三</td>
-                <td>男</td>
-            </tr>
-        </tbody>
-        <tfoot>
-            <tr>
-                <td>总计</td>
-                <td></td>
-                <td>5</td>
-            </tr>
-        </tfoot>
-    </table>
-
-    <table class="table table-dark table-striped table-hover">
-        <caption class="">表格</caption>
-        <thead><tr class="">
-            <th>编号</th>
-            <th>姓名</th>
-            <th>性别</th>
-        </tr></thead>
-        <tbody>
-            <tr>
-                <td>1</td>
-                <td>张三</td>
-                <td>男</td>
-            </tr>
-            <tr>
-                <td>1</td>
-                <td>张三</td>
-                <td>男</td>
-            </tr>
-        </tbody>
-        <tfoot>
-            <tr>
-                <td>总计</td>
-                <td></td>
-                <td>5</td>
-            </tr>
-        </tfoot>
-    </table>
-
-    <table class="table table-responsive">
-        <caption class="">表格</caption>
+        <caption class="">表格5</caption>
         <thead><tr class="">
             <th>编号</th>
             <th>姓名</th>
@@ -267,7 +155,174 @@
     </table>
 
     <table class="table">
-        <caption class="caption-top">表格</caption>
+        <caption class="">表格6</caption>
+        <thead><tr class="table-active">
+            <th>编号</th>
+            <th>姓名</th>
+            <th>性别</th>
+        </tr></thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>张三</td>
+                <td>男</td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>张三</td>
+                <td>男</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <td>总计</td>
+                <td></td>
+                <td>5</td>
+            </tr>
+        </tfoot>
+    </table>
+
+    <table class="table table-primary">
+        <caption class="">表格7</caption>
+        <thead><tr class="table-secondary">
+            <th>编号</th>
+            <th>姓名</th>
+            <th>性别</th>
+        </tr></thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>张三</td>
+                <td>男</td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>张三</td>
+                <td>男</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <td>总计</td>
+                <td></td>
+                <td>5</td>
+            </tr>
+        </tfoot>
+    </table>
+
+    <table class="table table-dark table-striped table-hover">
+        <caption class="">表格8</caption>
+        <thead><tr class="">
+            <th>编号</th>
+            <th>姓名</th>
+            <th>性别</th>
+        </tr></thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>张三</td>
+                <td>男</td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>张三</td>
+                <td>男</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <td>总计</td>
+                <td></td>
+                <td>5</td>
+            </tr>
+        </tfoot>
+    </table>
+
+    <div class="table-responsive">
+        <table class="table">
+            <caption class="">表格9</caption>
+            <thead><tr class="">
+                <th class="text-nowrap">编号</th>
+                <th class="text-nowrap">姓名</th>
+                <th class="text-nowrap">性别</th>
+                <th class="text-nowrap">性别</th>
+                <th class="text-nowrap">性别</th>
+                <th class="text-nowrap">性别</th>
+                <th class="text-nowrap">性别</th>
+                <th class="text-nowrap">性别</th>
+                <th class="text-nowrap">性别</th>
+                <th class="text-nowrap">性别</th>
+                <th class="text-nowrap">性别</th>
+                <th class="text-nowrap">性别</th>
+                <th class="text-nowrap">性别</th>
+                <th class="text-nowrap">性别</th>
+                <th class="text-nowrap">性别</th>
+                <th class="text-nowrap">性别</th>
+            </tr></thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>张三</td>
+                    <td>男</td>
+                    <td>男</td>
+                    <td>男</td>
+                    <td>男</td>
+                    <td>男</td>
+                    <td>男</td>
+                    <td>男</td>
+                    <td>男</td>
+                    <td>男</td>
+                    <td>男</td>
+                    <td>男</td>
+                    <td>男</td>
+                    <td>男</td>
+                    <td>男</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>张三</td>
+                    <td>男</td>
+                    <td>男</td>
+                    <td>男</td>
+                    <td>男</td>
+                    <td>男</td>
+                    <td>男</td>
+                    <td>男</td>
+                    <td>男</td>
+                    <td>男</td>
+                    <td>男</td>
+                    <td>男</td>
+                    <td>男</td>
+                    <td>男</td>
+                    <td>男</td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td>总计</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td>5</td>
+                </tr>
+            </tfoot>
+        </table>
+    </div>
+
+
+    <table class="table">
+        <caption class="caption-top">表格10</caption>
         <thead><tr class="table-primary">
             <th>编号</th>
             <th>姓名</th>
@@ -295,7 +350,7 @@
     </table>
 
     <table class="table table-striped">
-        <caption class="caption-top">表格</caption>
+        <caption class="caption-top">表格11</caption>
         <thead class="table-group-divider">
             <tr class="table-primary">
                 <th>编号</th>
