--- a/learn/bootstrap/简单组件/列表.html
+++ b/learn/bootstrap/简单组件/列表.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="../../bootstrap-5.3.3/css/bootstrap.min.css" rel="stylesheet">
-    <script src="../../bootstrap-5.3.3/js/bootstrap.bundle.min.js"></script>
+    <link href="../bootstrap-5.3.3/css/bootstrap.min.css" rel="stylesheet">
+    <script src="../bootstrap-5.3.3/js/bootstrap.bundle.min.js"></script>
 </head>
 <body class="container mt-5">
     <ul class="list-group">
@@ -35,9 +35,10 @@
     </ul>
     <ul class="list-group">
         <a href="#" class="list-group-item list-group-item-action">链接</a>
-    </ul>
-    <div class="list-group">
         <a href="#" class="list-group-item list-group-item-action">链接</a>
-    </div>
+        <a href="#" class="list-group-item list-group-item-action">链接</a>
+        <a href="#" class="list-group-item list-group-item-action">链接</a>
+        <a href="#" class="list-group-item">链接</a>
+    </ul>
 </body>
 </html>
