--- a/learn/bootstrap/简单组件/表单.html
+++ b/learn/bootstrap/简单组件/表单.html
@@ -4,10 +4,97 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="../../bootstrap-5.3.3/css/bootstrap.min.css" rel="stylesheet">
-    <script src="../../bootstrap-5.3.3/js/bootstrap.bundle.min.js"></script>
+    <link href="../bootstrap-5.3.3/css/bootstrap.min.css" rel="stylesheet">
+    <script src="../bootstrap-5.3.3/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
+    <div class="container-fluid mt-3">
+        <form action="#">
+            <label for="text1">文本框：</label>
+            <input type="text" name="" id="text1" placeholder="请输入" class="d-block">
+            <hr>
+            <div class="form-text">文本</div>
+            <label for="text2" class="form-label">文本框：</label>
+            <input type="text" name="" id="text2" placeholder="请输入" class="form-control">
+            <input type="search" name="" id="search1" placeholder="请输入" class="form-control form-control-sm">
+            <input type="number" name="" id="number1" class="form-control form-control-lg form-control-plaintext">
+            <input type="color" name="" id="" class="form-control-color form-control-lg form-control-plaintext">
+            <input type="range" name="" id="" class="form-range">
+            <textarea name="" id="" class="form-control" placeholder="请输入"></textarea>
+            <input type="file" name="" id="" class="form-control">
+            <input name="" id="" list="dtl1" class="form-control">
+            <datalist id="dtl1">
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+            </datalist>
+        </form>
+        <select name="" id="" class="form-select form-select-sm">
+            <optgroup label="A">
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="2">3</option>
+            </optgroup>
+        </select>
+        <select name="" id="" class="form-select form-select-lg" multiple>
+            <optgroup label="A">
+                <option value="1" selected>1</option>
+                <option value="2">2</option>
+                <option value="2">3</option>
+            </optgroup>
+            <optgroup label="B">
+                <option value="1">1</option>
+                <option value="2" selected>2</option>
+                <option value="2">3</option>
+            </optgroup>
+        </select>
+        <div class="form-check">
+            <label for="chk1" class="form-check-label">label</label>
+            <input type="checkbox" name="" id="chk1" class="form-check-input">
+        </div>
+        <div class="form-check form-check-inline form-check-reverse">
+            <label for="chk1" class="form-check-label">label</label>
+            <input type="checkbox" name="" id="chk1" class="form-check-input">
+        </div>
+        <div class="form-check form-check-inline">
+            <label for="chk1" class="form-check-label">label</label>
+            <input type="checkbox" name="" id="chk1" class="form-check-input">
+        </div>
+        <div class="form-check form-check-inline form-switch">
+            <label for="chk1" class="form-check-label">label</label>
+            <input type="checkbox" name="" id="chk1" class="form-check-input">
+        </div>
+        <div class="input-group input-group-lg">
+            <span class="input-group-text">text</span>
+            <input type="text" name="" id="text2" class="form-control">
+            <input type="number" name="" id="text2" class="form-control">
+            <span class="input-group-text">number</span>
+        </div>
+        <div class="input-group input-group-sm">
+            <button class="btn btn-primary">btn</button>
+            <input type="text" name="" id="text2" class="form-control">
+            <div class="input-group-text mt-0">
+                <input type="checkbox" name="" id="" class="form-check-input">
+            </div>
+            <input type="text" name="" id="text2" class="form-control">
+        </div>
+        <div class="input-group">
+            <button type="button" class="btn btn-outline-secondary">Action</button>
+            <button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown"></button>
+            <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#">Separated link</a></li>
+            </ul>
+            <input type="text" class="form-control" aria-label="Text input with segmented dropdown button">
+        </div>
+        <div class="form-floating">
+            <input type="text" name="" id="text3" class="form-control" placeholder="请输入">
+            <label for="text3" class="form-label">label</label>
+        </div>
+    </div>
 
     <form action="#">
       <label for="l1" class="form-label">标签</label>
