--- a/learn/sass/html/函数.html
+++ b/learn/sass/html/函数.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="../css/函数.css">
 </head>
 <body>
-    
+    <div class="div1">123</div>
+    <div class="div2">123</div>
+    <div class="div3">123</div>
+    <div class="div4">123</div>
+    <div class="div5">123</div>
+    <div class="div6">123</div>
+    <div class="div7">123</div>
+    <div class="div8">123</div>
+    <div class="div9">123</div>
+    <div class="div10">123</div>
 </body>
 </html>
