--- a/learn/vue/vue3-app/index.html
+++ b/learn/vue/vue3-app/index.html
@@ -7,7 +7,9 @@
     <title>Vite App</title>
   </head>
   <body>
+    <!-- 设置挂载容器 -->
     <div id="app"></div>
+    <!-- 载入JS -->
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
