--- a/learn/vue/ssydx/index.html
+++ b/learn/vue/ssydx/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="zh-CN">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>测试</title>
+    <style>
+        #app {
+          padding: 0;
+          margin: 0;
+          width: 100%;
+        }
+    </style>
   </head>
   <body>
     <div id="app"></div>
