--- a/learn/vue/ssydx/index.html
+++ b/learn/vue/ssydx/index.html
@@ -9,6 +9,8 @@
           padding: 0;
           margin: 0;
           width: 100%;
+          background-color: var(--bg-color);
+          color: var(--tt-color);
         }
     </style>
   </head>
