--- a/learn/vue/自实现/1.html
+++ b/learn/vue/自实现/1.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./3-2将属性与对象绑定.js" defer></script>
+    <script src="./2.js"></script>
 </head>
 <body>
-    
+    <div id="div1"></div>
 </body>
 </html>
