--- a/learn/vue/自实现/1.html
+++ b/learn/vue/自实现/1.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./2.js"></script>
+    <!-- <script src="./使用响应.js" defer type="module"></script> -->
+     <script src="./基本渲染.js" defer></script>
 </head>
 <body>
     <div id="div1"></div>
