--- a/learn/js/js再探/自定义类型/1.html
+++ b/learn/js/js再探/自定义类型/1.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- <script src="./实例与原型.js" defer></script> -->
     <!-- <script src="./原型链.js" defer></script> -->
+    <!-- <script src="./盗用构造函数.js" defer></script> -->
+    <!-- <script src="./组合继承.js" defer></script> -->
     <!-- <script src="./原型式继承.js" defer></script> -->
     <!-- <script src="./寄生式继承.js" defer></script> -->
-    <script src="./寄生式组合继承.js" defer></script>
+    <!-- <script src="./寄生式组合继承.js" defer></script> -->
+    <!-- <script src="./类.js" defer></script> -->
+    <script src="./类继承.js" defer></script>
 </head>
 <body>
     
